--- a/html/mie/css/output/patterns/07-form-fields.css
+++ b/html/mie/css/output/patterns/07-form-fields.css
@@ -112,6 +112,15 @@ fieldset {
 fieldset ul {
   list-style-type: none; }
 
+.fieldset-description {
+  color: #ffffff;
+  font-size: 1.1em;
+  margin: 0 0 1.5em 0; }
+
+.field-prefix {
+  color: #ffffff;
+  font-size: 1.1em; }
+
 input[type="checkbox"] {
   display: inline; }
 
@@ -141,7 +150,7 @@ select[multiple] {
 
 textarea[disabled], input[disabled], select[disabled] {
   background-color: #ccc;
-  color: #666; }
+  color: #555; }
 
 textarea[disabled]:hover, input[disabled]:hover, select[disabled]:hover {
   cursor: not-allowed; }
