--- a/html/mie/css/sass/patterns/0-header.scss
+++ b/html/mie/css/sass/patterns/0-header.scss
@@ -94,7 +94,7 @@
     padding: 0.5em 0 0 0;
     text-align: center;
     background-position: center top;
-    height: 14.8125em;
+    height: 9.8125em;
   }
   .form-item-search-block-form {
     float: left;
@@ -128,7 +128,7 @@
     float: left;
   }
   input[type="submit"] {
-    color: $white;
+    color: $dark-text;
     background-color: $light;
     font-size: 1.1em;
     outline: 0;
