--- a/html/mie/css/sass/patterns/06-subnavigation.scss
+++ b/html/mie/css/sass/patterns/06-subnavigation.scss
@@ -8,6 +8,9 @@
 .subnav em {
   display: inline-block;
   font-size: 1.1em;
+  padding: 0.4em 1em 0.4em 1em;
+  background-color: $mid;
+  color: $white;
   margin: 0 0 1em 0;
 }
 
