--- a/html/mie/css/output/patterns/0-navigation.css
+++ b/html/mie/css/output/patterns/0-navigation.css
@@ -49,7 +49,7 @@
     color: #ffffff;
     float: left; }
 
-2 .main-nav {
+.main-nav {
   font-size: 1em;
   z-index: 100; }
 
@@ -82,22 +82,43 @@
   .main-nav li .sub-menu .active:before {
     content: "» "; }
 
+.subnav-select-innav {
+  display: inline-block;
+  background-color: #334a7b;
+  padding: 1.5em 8% 0.2em 8%;
+  width: 100%; }
+  .subnav-select-innav select {
+    max-width: 18.75em;
+    color: #140431;
+    -webkit-appearance: menulist; }
+
+.subnav-select-inpage {
+  margin-bottom: 1.5em; }
+  .subnav-select-inpage label {
+    color: #412773; }
+  .subnav-select-inpage select {
+    max-width: 18.75em;
+    -webkit-appearance: menulist; }
+  @media only all and (min-width: 64em) {
+    .subnav-select-inpage {
+      display: none; } }
+
 .main-nav .parent .sectiontoggle {
   display: none; }
 
 .js .main-nav .parent-item {
   float: left; }
 
-.js .main-nav .parent .sectiontoggle {
+.js .main-nav .parent .sectiontoggle, .js .subnav-select-innav .sectiontoggle {
   display: block;
   float: right;
   padding: 0;
   margin: 0.5em 5% 0.5em 0; }
-  .js .main-nav .parent .sectiontoggle div {
+  .js .main-nav .parent .sectiontoggle div, .js .subnav-select-innav .sectiontoggle div {
     display: inline-block;
     padding: 0.1em 0.4em;
     background-color: #070111; }
-  .js .main-nav .parent .sectiontoggle .icon-arrow-down, .js .main-nav .parent .sectiontoggle .icon-arrow-up {
+  .js .main-nav .parent .sectiontoggle .icon-arrow-down, .js .main-nav .parent .sectiontoggle .icon-arrow-up, .js .subnav-select-innav .sectiontoggle .icon-arrow-down, .js .subnav-select-innav .sectiontoggle .icon-arrow-up {
     width: 0.625em;
     height: 0.625em; }
 
@@ -175,15 +196,9 @@
     text-decoration: underline; }
   .js nav.nav-collapse {
     position: static !important; }
-  .secondary-nav-spaceholder {
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    background-color: #412773;
-    padding: 1.1em 5% 1.2em 5%;
-    color: #ffffff; }
-    .secondary-nav-spaceholder span {
-      font-size: 1.1em; }
+  .subnav-select-innav {
+    display: none;
+    visibility: hidden; }
   .main-nav li {
     z-index: 100;
     height: 3.6em;
@@ -191,21 +206,20 @@
     text-align: center;
     float: left; }
     .main-nav li:nth-child(1) {
-      width: 25%;
-      /*  padding: 0;
-      a {
-	      width: 100%;
-	      padding: 0.8em 5% 1em 5%;
-      }*/ }
-    .main-nav li:nth-child(1), .main-nav li:nth-child(5) {
+      width: 25%; }
+    .main-nav li:nth-child(1) {
       padding: 0; }
-      .main-nav li:nth-child(1) a, .main-nav li:nth-child(5) a {
+      .main-nav li:nth-child(1) a {
         width: 100%;
-        padding: 0.9em 5% 1em 5%; }
+        padding: 0.8em 5% 1em 5%; }
     .main-nav li:nth-child(2) {
       width: 37%; }
+      .main-nav li:nth-child(2) .parent-item {
+        padding-left: 26%; }
     .main-nav li:nth-child(3) {
       width: 38%; }
+      .main-nav li:nth-child(3) .parent-item {
+        padding-left: 30%; }
     .main-nav li:nth-child(4) {
       border-right: 0.15em solid #375186; }
     .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
@@ -218,8 +232,8 @@
   .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
     min-width: 50%; }
   .js .main-nav .parent-item {
-    float: none;
-    padding-top: 0.9em; }
+    padding-top: 0.9em;
+    padding-left: 34%; }
   .js .main-nav .parent .sectiontoggle {
     padding-top: 0.3em;
     margin-right: 10%; }
@@ -252,6 +266,15 @@
         background-color: #24153f; } }
 
 @media only all and (min-width: 59em) {
+  .secondary-nav-spaceholder {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    background-color: #412773;
+    padding: 1.1em 5% 1.1em 5%;
+    color: #ffffff; }
+    .secondary-nav-spaceholder span {
+      font-size: 1.1em; }
   nav {
     background-color: #140431;
     margin: 0 0 0 0;
@@ -262,18 +285,14 @@
     margin: 0 auto 0 auto; }
   .main-nav li {
     text-align: center;
-    font-size: 0.9em;
+    font-size: 1em;
     font-weight: 400;
     margin-right: 2.5%;
-    padding: 0.4em 0 1.2em 0;
+    padding: 0.1em 0 1.5em 0;
     background-color: inherit;
     height: 100%;
     float: left;
     border-bottom: none; }
-    .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
-      width: auto;
-      background-color: inherit;
-      border: 0; }
     .main-nav li:nth-child(2n) {
       background-color: inherit; }
     .main-nav li:last-child {
@@ -284,8 +303,16 @@
       width: 12%; }
     .main-nav li:nth-child(2) {
       width: 20%; }
+      .main-nav li:nth-child(2) .parent-item {
+        padding-left: 0; }
     .main-nav li:nth-child(3) {
       width: 20%; }
+      .main-nav li:nth-child(3) .parent-item {
+        padding-left: 0; }
+    .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
+      width: auto;
+      background-color: inherit;
+      border: 0; }
     .main-nav li:nth-child(4) {
       width: 20%; }
     .main-nav li:nth-child(5) {
@@ -296,34 +323,38 @@
     width: 100%;
     max-width: 100%;
     padding-left: 0; }
-  .main-nav li.home a, .main-nav li.browse-films a {
-    margin-top: 0.375em; }
+  .main-nav li.home a {
+    margin-top: 0.175em; }
+  .js .main-nav .parent-item {
+    padding-left: 0; }
   .js .main-nav .parent .sectiontoggle {
     float: none;
     padding: 0;
     display: block;
     width: 100%;
-    margin: 0; }
+    margin: 0 0 0.8em 0; }
   .main-nav .sub-menu {
     visibility: hidden;
     position: absolute;
-    margin-top: 1.2em;
     left: 0;
     width: 100%; }
     .main-nav .sub-menu a {
       height: auto; }
+  .main-nav li:hover .sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
+    z-index: 10; }
+  .main-nav li.section-active .sub-menu {
+    z-index: 0; }
   .main-nav li:hover .sub-menu, .main-nav li.section-active .sub-menu {
     background-color: #412773;
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 1.2em;
     left: 0;
     width: 100%;
     max-width: 100%;
     margin-left: 0;
-    padding: 0.4em 4% 0.4em 4%; }
+    padding: 0.7em 4% 0.3em 4%; }
   .main-nav .sub-menu li a {
     font-size: 1.1em;
     width: 100%; }
@@ -335,7 +366,7 @@
     width: auto;
     text-align: center;
     display: inline-block;
-    background-color: #412773;
+    background-color: inherit;
     padding: 0;
     margin: 0 2% 0 2%;
     float: none; }
@@ -347,10 +378,11 @@
   .js nav.nav-collapse .main-nav ul.sub-menu li a {
     width: 100%;
     text-align: center;
-    background-color: #412773; }
+    background-color: inherit; }
   .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 1.2em 0 0 0;
-    padding: 0.4em 4% 0.4em 4%;
+    width: 100%;
+    margin: 0 0 0 0;
+    padding: 0.7em 4% 0.3em 4%;
     text-align: center;
     min-width: initial;
     background-color: #412773; }
@@ -377,6 +409,18 @@
     cursor: not-allowed; }
     .js nav.nav-collapse .main-nav li ul.sub-menu li .active:before, .js nav.nav-collapse .main-nav li ul.sub-menu li .active:after {
       content: none; } }
+
+@media only all and (min-width: 59em) and (max-width: 86.875em) {
+  .ancestor-create-films .secondary-nav-spaceholder {
+    display: none; }
+  .ancestor-create-films .nav-collapse {
+    margin-bottom: 8.1em; } }
+
+@media only all and (min-width: 59em) and (max-width: 87.82em) {
+  .ancestor-create-films nav.nav-collapse .main-nav li.analyse-film:hover .sub-menu, .ancestor-create-films nav.nav-collapse .main-nav li.analyse-film .sub-menu.open, .ancestor-create-films nav.nav-collapse .main-nav li.getting-started:hover .sub-menu, .ancestor-create-films nav.nav-collapse .main-nav li.getting-started .sub-menu.open, .ancestor-create-films nav.nav-collapse .main-nav li.browse-films:hover .sub-menu, .ancestor-create-films nav.nav-collapse .main-nav li.browse-films .sub-menu.open {
+    min-height: 6.5em; }
+    .ancestor-create-films nav.nav-collapse .main-nav li.analyse-film:hover .sub-menu li, .ancestor-create-films nav.nav-collapse .main-nav li.analyse-film .sub-menu.open li, .ancestor-create-films nav.nav-collapse .main-nav li.getting-started:hover .sub-menu li, .ancestor-create-films nav.nav-collapse .main-nav li.getting-started .sub-menu.open li, .ancestor-create-films nav.nav-collapse .main-nav li.browse-films:hover .sub-menu li, .ancestor-create-films nav.nav-collapse .main-nav li.browse-films .sub-menu.open li {
+      padding-top: 1.5em; } }
 
 @media only all and (min-width: 71.25em) {
   .main-nav li {
@@ -407,7 +451,8 @@
   .js .main-nav .parent-item {
     width: 80%;
     text-align: left;
-    padding-top: 0.6em; }
+    padding-top: 0.6em;
+    float: none; }
   .nav-collapse .main-nav {
     height: 3.4em; }
   .main-nav li.home a, .main-nav li.browse-films a {
@@ -416,7 +461,6 @@
     margin: 0.3em 0 0 0;
     width: 100%; }
   .js .main-nav .parent .sectiontoggle {
-    float: right;
     padding: 0;
     display: inline-block;
     width: 10%;
@@ -425,5 +469,9 @@
 @media only all and (min-width: 74em) {
   .js .main-nav {
     max-width: 69.57em; } }
+
+@media only all and (min-width: 80em) {
+  .js .main-nav {
+    max-width: 78.57em; } }
 
 /*# sourceMappingURL=0-navigation.css.map */
