--- a/html/mie/css/output/patterns/02-buttons.css
+++ b/html/mie/css/output/patterns/02-buttons.css
@@ -31,7 +31,7 @@
   background-color: #D8ADE5; }
 
 /* Buttons / CTAs */
-.btn {
+.btn, #user-login input[type="submit"] {
   font-size: 1.13em;
   background-color: #140431;
   color: #fff;
@@ -47,23 +47,23 @@
   transition: background-color 0.15s ease-in-out;
   border-top: none;
   border-bottom: 0.2em solid #0a0219; }
-  .btn:hover {
+  .btn:hover, #user-login input[type="submit"]:hover {
     text-decoration: underline;
     box-shadow: inset 0 0 0 0.2em #480eb0;
     background-color: #2e0970;
     border-bottom: 0.2em solid #0d0320; }
 
-.btn--mid {
+.btn--mid, #user-login input[type="submit"] {
   background-color: #412773;
   border-bottom: 0.2em solid #2e1b51; }
-  .btn--mid:hover {
+  .btn--mid:hover, #user-login input[type="submit"]:hover {
     box-shadow: inset 0 0 0 0.2em #6f45c0;
     background-color: #412773;
     border-bottom: 0.2em solid #3b2368; }
 
 .btn--light {
   background-color: #B088BC;
-  color: #ffffff;
+  color: #140431;
   border-bottom: 0.2em solid #825291; }
   .btn--light:hover {
     box-shadow: inset 0 0 0 0.2em #d0b8d7;
@@ -88,7 +88,7 @@
     border-bottom: 0.2em solid #984d0b; }
 
 .btn--contrast-alt {
-  background-color: #6381BF;
+  background-color: #5575b9;
   border-bottom: 0.2em solid #334a7b; }
   .btn--contrast-alt:hover {
     box-shadow: inset 0 0 0 0.2em #829acc;
@@ -107,7 +107,7 @@
 .btn--disabled {
   background-color: #ccc;
   border-bottom: 0.2em solid #b3b3b3;
-  color: #666; }
+  color: #555; }
   .btn--disabled:hover {
     text-decoration: none;
     box-shadow: none;
