--- a/html/mie/css/output/patterns/03-blockquote.css
+++ b/html/mie/css/output/patterns/03-blockquote.css
@@ -36,11 +36,12 @@
   border-top: 0.08em solid;
   border-bottom: 0.08em solid;
   border-color: #6f45c0;
-  padding: 1em 1em;
+  padding: 1em 0 1em 0;
   font-style: italic;
   font-size: 1.4em;
   line-height: 1.3em;
-  color: #412773; }
+  color: #412773;
+  max-width: 27em; }
 
 blockquote.quote__blockquote {
   margin: 0; }
@@ -73,7 +74,7 @@ blockquote.quote__blockquote {
   padding: 0.3em 1em 0.2em 1em;
   font-style: normal;
   font-weight: 600;
-  font-size: 1.9em;
+  font-size: 1.7em;
   line-height: 1.3em;
   color: #8F4F97; }
 
@@ -101,5 +102,9 @@ blockquote.quote__blockquote {
   margin-top: 0.8em; }
   .quote__caption:before {
     content: "— "; }
+
+@media only all and (min-width: 41em) {
+  .quote {
+    padding: 1em 1em 1em 1em; } }
 
 /*# sourceMappingURL=03-blockquote.css.map */
