--- a/html/mie/css/sass/_Patterns-ImportMap.scss
+++ b/html/mie/css/sass/_Patterns-ImportMap.scss
@@ -23,3 +23,5 @@
 @import "patterns/12-site-favicon";
 @import "patterns/13-responsive-tables";
 @import "patterns/14-legacy-IE-styles";
+@import "patterns/15-color-specific-styles";
+@import "patterns/16-callouts";
