SFE flavoured grunt file and replaced the contents with it

--- a/html/sfe/css/output/patterns/0-footer.css
+++ b/html/sfe/css/output/patterns/0-footer.css
@@ -23,7 +23,7 @@
   background-color: #140431; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #98D7E2; }
 
 .bg--light {
   background-color: #B088BC; }
@@ -93,7 +93,7 @@
   height: 5.8125em; }
 
 .footer__nav {
-  background-color: #392265;
+  background-color: #75c9d8;
   padding: 1.5em 8% 0.5em 8%;
   text-align: center; }
 
