--- a/html/sfe/css/output/patterns/0-header.css
+++ b/html/sfe/css/output/patterns/0-header.css
@@ -22,7 +22,7 @@
   background-color: #140431; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #98D7E2; }
 
 .bg--light {
   background-color: #B088BC; }
@@ -72,9 +72,9 @@
   padding: 0 8% 0 8%; }
 
 .header__search-trigger {
-  background-color: #412773;
+  background-color: #98D7E2;
   cursor: pointer;
-  border-bottom: 0.3em solid #2e1b51; }
+  border-bottom: 0.3em solid #40b5c9; }
   .header__search-trigger .icon-search {
     width: 1.6875em;
     height: 1.75em;
@@ -139,7 +139,7 @@
     .header__part--search input[type="submit"]:focus, .header__part--search input[type="submit"]:hover {
       background-color: #D8ADE5;
       border: 0.135em solid #D8ADE5;
-      color: #412773; }
+      color: #98D7E2; }
   .header__part--search .search__advanced {
     display: inline-block;
     font-size: 1em;
