--- a/html/sfe/css/output/patterns/02-buttons.css
+++ b/html/sfe/css/output/patterns/02-buttons.css
@@ -22,7 +22,7 @@
   background-color: #140431; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #98D7E2; }
 
 .bg--light {
   background-color: #B088BC; }
@@ -54,12 +54,12 @@
     border-bottom: 0.2em solid #0d0320; }
 
 .btn--mid, #user-login input[type="submit"] {
-  background-color: #412773;
-  border-bottom: 0.2em solid #2e1b51; }
+  background-color: #98D7E2;
+  border-bottom: 0.2em solid #40b5c9; }
   .btn--mid:hover, #user-login input[type="submit"]:hover {
-    box-shadow: inset 0 0 0 0.2em #6f45c0;
-    background-color: #412773;
-    border-bottom: 0.2em solid #3b2368; }
+    box-shadow: inset 0 0 0 0.2em #b7e3eb;
+    background-color: #98D7E2;
+    border-bottom: 0.2em solid #7bccda; }
 
 .btn--light {
   background-color: #B088BC;
