--- a/html/sfe/css/output/patterns/06-list-of-items.css
+++ b/html/sfe/css/output/patterns/06-list-of-items.css
@@ -23,7 +23,7 @@
   background-color: #140431; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #98D7E2; }
 
 .bg--light {
   background-color: #B088BC; }
