--- a/html/sfe/css/output/patterns/06-pagination.css
+++ b/html/sfe/css/output/patterns/06-pagination.css
@@ -22,7 +22,7 @@
   background-color: #140431; }
 
 .bg--mid {
-  background-color: #412773; }
+  background-color: #98D7E2; }
 
 .bg--light {
   background-color: #B088BC; }
@@ -54,7 +54,7 @@ ol.pagination li {
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: #412773;
+  background-color: #98D7E2;
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
